--- a/pages/login.html
+++ b/pages/login.html
@@ -24,7 +24,7 @@
 
                     <label for="password" class="sr-only">Senha</label>
                     <input name="password" type="password" placeholder="Senha" />
-                    <a href="#">Esqueceu a Senha?</a>
+                    <a href="/pages/auxPages/password_recover.html">Esqueceu a Senha?</a>
                     <input type="button"  class="btnLogin" value="Entrar">
                 </form>
                 <div class="flex separator align-items-center">
