logo added to the sidebar(feed.html)

--- a/pages/feed.html
+++ b/pages/feed.html
@@ -11,8 +11,8 @@
     <div class="navbar-container">
         <!--logo div-->
         <div class="navbar-logo-div">
-            <a class="navbar-logo-link" href="#"><img class="navbar-logo-img" src="./assets/img/logo.svg" alt="logo"></a>
-            <button class="navbar-toggler"><img class="navbar-toggler-img" src="./assets/img/menu.svg" alt="menu-toggler"></button>
+            
+            <button class="navbar-toggler"><img class="navbar-toggler-img" src="../images/sharEd.svg" alt="menu-toggler" height="64" width="64"></button>
         </div>
 
         <!--search input-->
