Profile Page made

--- a/pages/login.html
+++ b/pages/login.html
@@ -25,7 +25,7 @@
                     <label for="password" class="sr-only">Senha</label>
                     <input name="password" type="password" placeholder="Senha" />
                     <a href="/pages/auxPages/password_recover.html">Esqueceu a Senha?</a>
-                    <input type="button"  class="btnLogin" value="Entrar">
+                    <input type="button"  class="btnLogin" value="Entrar" onclick="window.open('/pages/feed.html')">
                 </form>
                 <div class="flex separator align-items-center">
                    
