--- a/pages/feed.html
+++ b/pages/feed.html
@@ -22,9 +22,9 @@
         <!--item list-->
         <ul class="menu-list">   
             <li class="menu-item">                        
-                <a class="menu-link" href="#"> 
-                    <img src="./assets/img/grid.svg" title="Dashboard" class="menu-icon" alt="grid">
-                    <span class="menu-link-text">Dashboard</span>                            
+                <a class="menu-link" href="./profile.html"> 
+                    <img src="../images/profile_image.svg" title="Profile" class="menu-icon" alt="profile-image" height="48" width="48">
+                    <span class="menu-link-text">Perfil</span>                            
                 </a>
             </li>
             <li class="menu-item">                        
@@ -63,7 +63,7 @@
                 <p class="user-occupation">Veterinária</p>
             </div>
         </div>
-        <a class="logout-btn" href="#">
+        <a class="logout-btn" href="./login.html">
             <img class="logout-img" src="./assets/img/log-out.svg" alt="logout">
         </a>
     </div>
