--- a/pages/profile.html
+++ b/pages/profile.html
@@ -69,7 +69,7 @@
     </div>
 </nav>
 <header class="header" id="header">
-    <nav class="navbt container">
+    <nav class="nav container">
         <a href="#" class="nav__logo">Marlon</a>
 
         <div class="nav__menu" id="nav-menu">
