--- a/frontend/pages/auxPages/password_recover.html
+++ b/frontend/pages/auxPages/password_recover.html
@@ -13,7 +13,7 @@
         <section id="auth" class="flex direction-column">
             <div class="panel login flex direction-column">
                 <h1 title="Instagram" class="flex justify-content-center">
-                    <img src="/images/Shar.Ed_logo.png" alt="Logo Shar.Ed" title="Shar.Ed Logo" width="120" height="120" />
+                    <img src="../../images/Shar.Ed_logo.png" alt="Logo Shar.Ed" title="Shar.Ed Logo" width="120" height="120" />
                 </h1>
                 <h2 class="flex justify-content-center">
                     Recuperar Senha
