--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrar ou Registrar</title>
-    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body>
     <main class="flex align-items-center justify-content-center">
@@ -13,19 +13,25 @@
         <section id="auth" class="flex direction-column">
             <div class="panel login flex direction-column">
                 <h1 title="Instagram" class="flex justify-content-center">
-                    <img src="/images/Shar.Ed_logo.png" alt="Logo Shar.Ed" title="Shar.Ed Logo" width="120" height="120" />
+                    <img src="../images/Shar.Ed_logo.png" alt="Logo Shar.Ed" title="Shar.Ed Logo" width="120" height="120" />
                 </h1>
                 <h2 class="flex justify-content-center">
-                    Entrar
+                    Registrar
                 </h2>
                 <form>
+                    <label for="name" class="sr-only">Email</label>
+                    <input name="name" placeholder="Nome Completo" />
+
                     <label for="email" class="sr-only">Email</label>
-                    <input name="email" placeholder="e-mail" />
+                    <input name="email" placeholder="E-mail" />
 
                     <label for="password" class="sr-only">Senha</label>
                     <input name="password" type="password" placeholder="Senha" />
-                    <a href="/pages/auxPages/password_recover.html">Esqueceu a Senha?</a>
-                    <input type="button"  class="btnLogin" value="Entrar" onclick="window.open('/pages/feed.html')">
+
+                    <label for="confirm-password" class="sr-only">Senha</label>
+                    <input name="confirm-password" type="password" placeholder="Confirme a Senha" />
+
+                    <input type="button"  class="btnLogin" value="Registrar" onclick="window.open('/pages/feed.html')">
                 </form>
                 <div class="flex separator align-items-center">
                    
