navigation with php(without routes) made

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -26,6 +26,9 @@
                     <input name="password" type="password" placeholder="Senha" />
                     <a href="../pages/auxPages/password_recover.html">Esqueceu a Senha?</a>
                     <input type="submit"  class="btnLogin" value="Entrar">
+                    <h4>
+                        <a href="../pages/signup.html">Ainda Não tem uma conta?</a>
+                    </h4>
                 </form>
                 <div class="flex separator align-items-center">
                    
