posting links navbar made

--- a/frontend/pages/feed.html
+++ b/frontend/pages/feed.html
@@ -28,9 +28,9 @@
                 </a>
             </li>
             <li class="menu-item">                        
-                <a class="menu-link" href="#">
-                    <img src="./assets/img/pet.svg" title="Pets" class="menu-icon" alt="pet">
-                    <span class="menu-link-text">Pets</span>    
+                <a class="menu-link" href="./contentPosting.html"> 
+                    <img src="../images/post.svg" title="Post" class="menu-icon" alt="post-content" height="48" width="48">
+                    <span class="menu-link-text">Postar</span>                            
                 </a>
             </li>
             <li class="menu-item">                        
