--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -22,15 +22,15 @@
         <!--item list-->
         <ul class="menu-list">   
             <li class="menu-item">                        
-                <a class="menu-link" href="#"> 
-                    <img src="./assets/img/grid.svg" title="Dashboard" class="menu-icon" alt="grid">
-                    <span class="menu-link-text">Dashboard</span>                            
+                <a class="menu-link" href="./profile.html"> 
+                    <img src="../images/profile_image.svg" title="Profile" class="menu-icon" alt="profile-image" height="48" width="48">
+                    <span class="menu-link-text">Perfil</span>                            
                 </a>
             </li>
             <li class="menu-item">                        
-                <a class="menu-link" href="#">
-                    <img src="./assets/img/pet.svg" title="Pets" class="menu-icon" alt="pet">
-                    <span class="menu-link-text">Pets</span>    
+                <a class="menu-link" href="./contentPosting.html"> 
+                    <img src="../images/post.svg" title="Post" class="menu-icon" alt="post-content" height="48" width="48">
+                    <span class="menu-link-text">Postar</span>                            
                 </a>
             </li>
             <li class="menu-item">                        
